--- a/css/index.css
+++ b/css/index.css
@@ -76,7 +76,7 @@ h2 {
 }
 
  .instructions{
-  text-align: left;
+  text-align: center;
   padding-left: 1%;
   padding-right: 1%;
   background-color: lightblue;
