--- a/css/index.css
+++ b/css/index.css
@@ -88,4 +88,8 @@ h2 {
  .instructions li {
   padding-top: 10px ;
  }
- img {margin-left: 30px;}
+.instructions img {
+  margin-left: 30px;
+  width: 450px;
+  height 400px;
+}
