--- a/css/index.css
+++ b/css/index.css
@@ -82,7 +82,7 @@ h2 {
   background-color: lightblue;
   border: 5px solid lightgray;
   border-radius: 5px;
-  margin:2%;
+  margin: 0 auto;
  }
 
  .instructions li {
@@ -90,6 +90,6 @@ h2 {
  }
 .instructions img {
   margin-left: 30px;
-  width: 450px;
-  height: 400px;
+  width: 60%;
+  height: 40%;
 }
